styles: all themes are setup, gotta fix colors for better contrast

--- a/src/style.css
+++ b/src/style.css
@@ -3,19 +3,100 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background: linear-gradient(
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  --bg-color: linear-gradient(
     to bottom,
     rgba(26, 199, 133, 0.5),
     rgba(41, 156, 156, 0.6),
     rgba(3, 37, 53, 0.75)
   );
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --bg-modal-color: linear-gradient(
+    to bottom,
+    rgba(28, 107, 107, 1),
+    rgba(3, 37, 53, 1)
+  );
+  --text-color: rgba(255, 255, 255, 0.9);
+  --text-highlight: rgba(100, 228, 173, 0.867);
+  --btn-color: #2ecc71;
+  --btn-hover: #27ae60;
 }
+
+.theme-tequila {
+  --bg-color: linear-gradient(
+    to bottom,
+    rgba(239, 225, 155, 0.8),
+    rgba(255, 195, 113, 0.8),
+    rgba(255, 94, 58, 0.7)
+  );
+  --bg-modal-color: linear-gradient(
+    to bottom,
+    rgba(255, 210, 140, 1),
+    rgba(255, 144, 88, 1)
+  );
+  --text-color: rgba(50, 10, 5, 0.95);
+  --text-highlight: rgba(243, 38, 38, 0.942);
+  --btn-color: #ff7e3d;
+  --btn-hover: #e65100;
+}
+
+.theme-lagoon {
+  --bg-color: linear-gradient(
+    to bottom,
+    rgba(0, 193, 255, 0.7),
+    rgba(0, 102, 204, 0.7),
+    rgba(0, 43, 119, 0.8)
+  );
+  --bg-modal-color: linear-gradient(
+    to bottom,
+    rgba(0, 102, 204, 1),
+    rgba(0, 43, 119, 1)
+  );
+  --text-color: rgba(255, 255, 255, 0.95);
+  --text-highlight: rgba(92, 209, 255, 0.921);
+  --btn-color: #4fc3f7;
+  --btn-hover: #039be5;
+}
+
+.theme-colada {
+  --bg-color: linear-gradient(
+    to bottom,
+    rgba(255, 255, 200, 0.9),
+    rgba(255, 240, 180, 0.9),
+    rgba(255, 224, 130, 0.8)
+  );
+  --bg-modal-color: linear-gradient(
+    to bottom,
+    rgba(255, 255, 200, 1),
+    rgba(255, 224, 130, 1)
+  );
+  --text-color: rgba(80, 50, 0, 0.95);
+  --text-highlight: rgb(255, 164, 28);
+  --btn-color: #fcd670;
+  --btn-hover: #f4be42;
+}
+
+.theme-daiquiri {
+  --bg-color: linear-gradient(
+    to bottom,
+    rgba(255, 102, 153, 0.8),
+    rgba(255, 51, 102, 0.7),
+    rgba(153, 0, 51, 0.85)
+  );
+  --bg-modal-color: linear-gradient(
+    to bottom,
+    rgba(255, 51, 102, 1),
+    rgba(153, 0, 51, 1)
+  );
+  --text-color: rgba(255, 240, 245, 0.95);
+  --text-highlight: rgba(255, 142, 217, 0.914);
+  --btn-color: #ff4f87;
+  --btn-hover: #cc3d6b;
+}
+
 
 a {
   font-weight: 500;
@@ -41,9 +122,10 @@ h1 {
 }
 
 #app {
-  width: 80%;
+  position:absolute;
+  width: 100%;
+  height:100%;
   margin: 0 auto;  
-  padding: 2rem;
   text-align: center;
 }
 
